# vaas

./: .gitignore  DOCKER_ENV  Readme.md  composer.json  docker_tag  flake.nix  justfile  renovate.json  test.sh
.devcontainer/: Dockerfile
.github/actions/vaas-scan-action/: README.md  action.yml
.github/workflows/: ci-cpp-toolchain.yaml  ci-cpp.yaml  ci-dotnet.yaml  ci-git-scan.yaml  ci-golang.yaml  ci-java-legacy.yaml  ci-java.yaml  ci-php-deploy.yaml  ci-php.yaml  ci-python.yaml  ci-ruby.yaml  ci-rust-gscan-cli.yaml  ci-rust.yaml  ci-typescript.yaml  ci.yaml  image-retention.yaml  vulncheck-golang.yml
backend/: Changelog.md
c++/: .clang-format  CMakeCache.txt  CMakeLists.txt  main.cpp  vaas.h  vcpkg-configuration.json  vcpkg.json
cpp/: .gitignore  CMakeLists.txt  CMakePresets.json  Cargo.toml  Dockerfile.build  README.md  build.rs  build.sh  build_and_test.sh  dotenv.h  main.cpp  test.sh  vaas.h  vaas_test.cpp  vcpkg.json
cpp/examples/: CMakeLists.txt
cpp/examples/include/: dotenv.h
cpp/examples/src/: main.cpp
cpp/src/: lib.rs  vaas.rs
dotnet/.devcontainer/: devcontainer.json
dotnet/Vaas/: Vaas.sln  create_big_sample.sh
dotnet/Vaas/.config/: dotnet-tools.json
dotnet/Vaas/.devcontainer/: devcontainer.json
dotnet/examples/VaasExample/: Program.cs  VaasExample.csproj  VaasExample.sln
github-actions/cleanup-packages/: go.mod  go.sum
github-actions/cleanup-packages/.devcontainer/: devcontainer.json
go/: Protocol.md  go.mod
go/.devcontainer/: devcontainer.json
go/src/: vaas.go
go/src/messages/: authenticationRequest.go
go/vaas/: go.mod  go.sum
golang/vaas/: .gitignore  README.md  check.sh  git-scan.Dockerfile  go.mod  go.sum
golang/vaas/.devcontainer/: devcontainer.json
java/: Readme.md  build.gradle  build.local.gradle  gradle.properties  settings.gradle
java/.devcontainer/: Dockerfile  devcontainer.json
java/.run/: Test.run.xml
perl/: .gitignore  cpanfile
perl/.devcontainer/: devcontainer.json
perl/src/: VaaS.pm
perl/tests/: test.pl
php/: .gitignore  Readme.md  composer-update.sh  phpcs.xml  phpunit.xml
php/.devcontainer/: Dockerfile  devcontainer.json
php/examples/: Readme.md
protocol/: HTTP Protocol.md  Protocol.md  websocket-protocol.drawio
python/: .gitignore  .pylintrc  LICENSE  README.md  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.py
python/.devcontainer/: Dockerfile  devcontainer.json
python/example/: main.py
python/example/test-files/: main.py
python/examples/VaasExample/: authentication_example.py  main.py  main_url.py  requirements.txt
python/examples/VaasExample/.devcontainer/: devcontainer.json
python/src/: Vaas.py  vaas.py  vaas_test.py
python/src/vaas/: __init__.py  async_file_reader.py  client_credentials_grant_authenticator.py  resource_owner_password_authenticator.py  resource_owner_password_grant_authenticator.py  sha256.py  vaas.py  vaas_errors.py  vaas_interface.py
python/src/vaas/authentication/: authenticator_interface.py  client_credentials_grant_authenticator.py  resource_owner_password_grant_authenticator.py
python/src/vaas/messages/: file_analysis_started.py  file_report.py  problem_details.py  url_analysis_request.py  url_analysis_started.py  url_report.py  vaas_verdict.py
python/src/vaas/options/: for_file_options.py  for_sha256_options.py  for_stream_options.py  for_url_options.py  vaas_options.py
python/tests/: VaasTest.py  conftest.py  test_client_credentials_grant_authenticator.py  test_resource_owner_password_authenticator.py  test_resource_owner_password_grant_authenticator.py  test_vaas.py
ruby/: Gemfile  README.md  test.txt  vaas-0.0.1.gem  vaas.gemspec
ruby/.devcontainer/: Dockerfile
ruby/examples/: authentication.rb  example.rb  example_with_lists.rb  example_with_reconnect.rb  simple_example.rb
ruby/lib/: vaas.rb
ruby/src/: .gitignore  client_credentials_grant_authenticator.rb  example.rb  vaas.rb  vaas_verdict.rb
ruby/test/: test.txt  vaas_test.rb
rust/: Cargo.toml  Readme.md
rust/.devcontainer/: Dockerfile  devcontainer.json
rust/.run/: Build.run.xml  Check.run.xml  Test.run.xml
rust/examples/gscan/: Cargo.toml  Readme.md
rust/examples/gscan/src/: main.rs
rust/examples/kde_dolphin/: Cargo.toml  Readme.md  build.rs  getGdataVerdict.desktop  install.sh  uninstall.sh
rust/examples/kde_dolphin/.devcontainer/: devcontainer.json
rust/examples/kde_dolphin/src/: main.rs
rust/examples/kde_dolphin/ui/: app.60  app.slint
rust/src/: authenticator.rs  builder.rs  cancellation.rs  connection.rs  error.rs  http.rs  lib.rs  options.rs  resource_owner_password_grant_authenticator.rs  response_broker.rs  sha256.rs  vaas.rs  vaas_verdict.rs  verdict_responses.rs
rust/src/auth/: authenticator.rs  mod.rs
rust/src/auth/authenticators/: client_credentials.rs  mod.rs  password.rs
rust/src/authentication/: authenticator.rs  client_credentials.rs  mod.rs  password.rs  secret_string.rs  token_receiver.rs
rust/src/message/: analysis.rs  auth_request.rs  auth_response.rs  detection.rs  error.rs  kind.rs  lib_magic.rs  message_type.rs  mod.rs  open_id_connect_token_response.rs  problem.rs  report.rs  state.rs  token_response.rs  upload_url.rs  verdict.rs  verdict_request.rs  verdict_request_for_file.rs  verdict_request_for_stream.rs  verdict_request_for_url.rs  verdict_response.rs
rust/tests/: real_api_integration_tests.rs
shell/: README.md  for_file.sh  get_verdict.sh  vaas.sh
typescript/: .mocharc.json  .npmignore  Readme.md  jest.config.js  npm-shrinkwrap.json  package-lock.json  package.json  pnpm-lock.yaml  test-explorer-mocharc.yml  tsconfig.json
typescript/.devcontainer/: Dockerfile  devcontainer.json
typescript/src/: CancellationToken.ts  ClientCredentialsGrantAuthenticator.ts  CreateVaasWithClientCredentialsGrant.ts  Index.ts  ResourceOwnerPasswordGrantAuthenticator.ts  Vaas.ts  VaasErrors.ts  createVaasWithClientCredentialsGrant.ts  getTokenWithClientCredentialsGrant.ts  getTokenWithResourceOwnerPasswordGrant.ts  index.ts  vaas.ts  verdict.ts
typescript/tests/: createVaas.ts  test.ts
(+431 files in other folders)
