[package]
name = "vaas-cxx"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0.116"
vaas = { path = "../rust" }
tokio = { version = "1.36", features = ["sync"] }
reqwest = "0.11.24"
url = "2.5.0"
async-trait = "0.1.77"

[build-dependencies]
cxx-build = "1.0.116"
