[project]
name = "gdata-vaas"
version = "0.0.0"
description = "G DATA Verdict-as-a-Service Python client"
readme = "README.md"
requires-python = ">=3.10"

dependencies = [
  "authlib>=1.6.6",
  "python-dotenv>=1.2.1",
  "httpx[http2]>=0.28.1",
  "aiofiles>=24.1,<26",
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
test = [
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-httpx>=0.36.0",
]

build = [
  "build>=1.4.0",
]

dev = [
  "build>=1.4.0",
  "pytest>=9.0.2",
  "pytest-asyncio>=1.3.0",
  "pytest-httpx>=0.36.0",
]
