[metadata]
name = gdata-vaas
version = 0.0.0
author = G DATA CyberDefense AG
author_email = oem@gdata.de
description = gdata-vaas is a Python library for the VaaS-API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GDATASoftwareAG/vaas/tree/main/python
project_urls =
    Bug Tracker = https://github.com/GDATASoftwareAG/vaas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.8
install_requires =
    websockets == 10.3
    httpx[http2] == 0.23.0
    jwt == 1.3.1
    authlib == 1.0.1
    aiofiles==22.1.0

[options.packages.find]
where = src