[metadata]
name = gdata-vaas
version = 0.0.0
author = G DATA CyberDefense AG
author_email = oem@gdata.de
description = gdata-vaas is a Python library for the VaaS-API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/GDATASoftwareAG/vaas/tree/main/python
project_urls =
    Bug Tracker = https://github.com/GDATASoftwareAG/vaas/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
python_requires = >=3.12
install_requires =
    authlib~=1.3
    python-dotenv~=1.0
    httpx[http2]~=0.27
    build~=1.1
    aiofiles~=25.1
    pydantic~=2.12.3
    pytest-asyncio~=1.2.0
    pytest~=9.0.2
    pytest-httpx~=0.35.0

[options.packages.find]
where = src
