[package]
name = "vaas"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["GDATA CyberDefense AG"]
description = "Check files and hashes for malicious content."
readme = "Readme.md"
keywords = ["malware", "anti-virus", "security"]
categories = ["api-bindings"]
repository = "https://github.com/GDATASoftwareAG/vaas"

[dependencies]
websockets = "0.3.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"
thiserror = "2.0.17"
uuid = { version = "1.19.0", features = ["serde", "v4"] }
reqwest = { version = "0.13.1", features = ["stream", "form", "json"] }
regex = "1.12.2"
tokio = { version = "1.49", features = ["sync", "fs"] }
sha2 = "0.10.8"
futures = "0.3.31"
rand = "0.9.0"
async-trait = "0.1.89"
bytes = "1.11.0"
tokio-util = "0.7.18"
futures-util = "0.3.31"
tokio-stream = "0.1.18"
tracing = "0.1.44"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.49", features = ["rt", "macros", "rt-multi-thread"] }
tracing-test = "0.2.5"