[package]
name = "vaas"
version = "0.0.1"
edition = "2024"
license = "MIT"
authors = ["GDATA CyberDefense AG"]
description = "Check files and hashes for malicious content."
readme = "Readme.md"
keywords = ["malware", "anti-virus", "security"]
categories = ["api-bindings"]
repository = "https://github.com/GDATASoftwareAG/vaas"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"
reqwest = { version = "0.13.1", features = ["stream", "form", "json"] }
regex = "1.12.2"
tokio = { version = "1.49", features = ["sync", "fs", "macros"] }
sha2 = "0.10.8"
futures = "0.3.31"
async-trait = "0.1.89"
tokio-util = "0.7.18"
futures-util = "0.3.31"
url = { version = "2.5.0", features = ["serde"] }

[dev-dependencies]
dotenv = "0.15"
tokio = { version = "1.49", features = ["rt", "macros", "rt-multi-thread"] }
mockito = "1.7.1"
serde_json = "1.0.149"
rstest = "0.26.1"
tempfile = "3.25.0"
