[package]
name = "gscan"
version = "0.1.0"
edition = "2021"
authors = ["GDATA CyberDefense AG <opensource@gdata.de>"]
license = "MIT"
description = "GDATA Verdict-as-a-Service CLI Scanner"
publish = false

[dependencies]
vaas = { version = "3.0.2" }
tokio = { version = "1.36", features = [ "rt-multi-thread", "macros"] }
clap = { version = "4.4", features = ["env"]}
reqwest = "0.11"
futures = "0.3"
dotenv = "0.15"