[package]
name = "gscan"
version = "1.0.0"
edition = "2021"
authors = ["GDATA CyberDefense AG <opensource@gdata.de>"]
license = "MIT"
description = "GDATA Verdict-as-a-Service CLI Scanner"
publish = false

[dependencies]
vaas = { version = "6.0.0" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.18", features = ["env", "cargo", "derive"] }
reqwest = "0.12.4"
futures = "0.3.30"
dotenv = "0.15"
walkdir = "2.5.0"