[package]
name = "gscan"
version = "1.0.1"
edition = "2021"
authors = ["GDATA CyberDefense AG <opensource@gdata.de>"]
license = "MIT"
description = "GDATA Verdict-as-a-Service CLI Scanner"
publish = false

[dependencies]
vaas = { version = "6.0.0" }
tokio = { version = "1.37", features = ["rt-multi-thread", "macros"] }
clap = { version = "4.5.4", features = ["env", "cargo"] }
reqwest = "0.13.0"
futures = "0.3.30"
dotenv = "0.15"
