[package]
name = "gdata_vaas_ui"
version = "0.1.0"
edition = "2021"
authors = ["GDATA CyberDefense AG <opensource@gdata.de>"]
license = "GPL-3.0-only"
description = "GDATA Verdict-as-a-Service Scanner"
build = "build.rs"
publish = false

[dependencies]
slint = "0.3"
vaas = { path = "../.."}
tokio = { version = "1.27", features = ["rt", "macros", "rt-multi-thread"] }
structopt = "0.3"

[build-dependencies]
slint-build = "0.3"